# sc-rdl-rust

./: .env  .gitignore  Cargo.toml  response.html
config/: rdl.toml
src/: config.rs  database.rs  logger_storage.rs  main.rs  rdl_config.rs  spic_client.rs
