[package]
name = "sc-rdl-rust"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-pc-windows-gnu"

[target.x86_64-pc-windows-gnu]
linker = "gcc"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] } # "0.4.39" 
config = "0.15.6"
keyring = { version = "3.6.1", features = ["windows-native"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "chrono"] }
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
